mermaid/grammar/generated/MermaidStateDiagramParser.py
# Generated from C:\Users\pmora\OneDrive\Documents\Git\GitHub\pictosync\mermaid\grammar\MermaidStateDiagramParser.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MermaidStateDiagramParser ( Parser ):

    grammarFileName = "MermaidStateDiagramParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'stateDiagram-v2'", "'stateDiagram'", 
                     "'state'", "'as'", "'direction'", "'classDef'", "'class'", 
                     "'note'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'TB'", "'TD'", "'BT'", "'LR'", "'RL'", "'[*]'", "<INVALID>", 
                     "'-->'", "'--'", "<INVALID>", "':::'", "'['", "']'", 
                     "'{'", "'}'", "';'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "':'" ]

    symbolicNames = [ "<INVALID>", "KW_STATE_DIAGRAM_V2", "KW_STATE_DIAGRAM", 
                      "KW_STATE", "KW_AS", "KW_DIRECTION", "KW_CLASSDEF", 
                      "KW_CLASS", "KW_NOTE", "KW_OF", "KW_RIGHT", "KW_LEFT", 
                      "KW_END_NOTE", "DIR_TB", "DIR_TD", "DIR_BT", "DIR_LR", 
                      "DIR_RL", "START_END", "STEREOTYPE", "TRANSITION", 
                      "CONCURRENCY", "QUOTED_STRING", "TRIPLE_COLON", "LBRACK", 
                      "RBRACK", "LBRACE", "RBRACE", "SEMI", "COMMA", "INT", 
                      "ID", "COLON", "COMMENT", "NEWLINE", "WS", "FREE_TEXT", 
                      "NOTE_HDR_WS", "CSS_READY_WS", "CSS_VALUE_START", 
                      "CSS_WS" ]

    RULE_diagram = 0
    RULE_diagramType = 1
    RULE_statement = 2
    RULE_stateDecl = 3
    RULE_stateId = 4
    RULE_descriptionText = 5
    RULE_classShorthand = 6
    RULE_transitionStmt = 7
    RULE_stateRef = 8
    RULE_transitionLabel = 9
    RULE_compositeBlock = 10
    RULE_concurrencyDiv = 11
    RULE_noteBlock = 12
    RULE_noteSide = 13
    RULE_noteLineContent = 14
    RULE_noteBodyLine = 15
    RULE_directionStmt = 16
    RULE_direction = 17
    RULE_classDefStmt = 18
    RULE_classNameList = 19
    RULE_classAssignStmt = 20
    RULE_stateIdList = 21
    RULE_cssString = 22

    ruleNames =  [ "diagram", "diagramType", "statement", "stateDecl", "stateId", 
                   "descriptionText", "classShorthand", "transitionStmt", 
                   "stateRef", "transitionLabel", "compositeBlock", "concurrencyDiv", 
                   "noteBlock", "noteSide", "noteLineContent", "noteBodyLine", 
                   "directionStmt", "direction", "classDefStmt", "classNameList", 
                   "classAssignStmt", "stateIdList", "cssString" ]

    EOF = Token.EOF
    KW_STATE_DIAGRAM_V2=1
    KW_STATE_DIAGRAM=2
    KW_STATE=3
    KW_AS=4
    KW_DIRECTION=5
    KW_CLASSDEF=6
    KW_CLASS=7
    KW_NOTE=8
    KW_OF=9
    KW_RIGHT=10
    KW_LEFT=11
    KW_END_NOTE=12
    DIR_TB=13
    DIR_TD=14
    DIR_BT=15
    DIR_LR=16
    DIR_RL=17
    START_END=18
    STEREOTYPE=19
    TRANSITION=20
    CONCURRENCY=21
    QUOTED_STRING=22
    TRIPLE_COLON=23
    LBRACK=24
    RBRACK=25
    LBRACE=26
    RBRACE=27
    SEMI=28
    COMMA=29
    INT=30
    ID=31
    COLON=32
    COMMENT=33
    NEWLINE=34
    WS=35
    FREE_TEXT=36
    NOTE_HDR_WS=37
    CSS_READY_WS=38
    CSS_VALUE_START=39
    CSS_WS=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DiagramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def diagramType(self):
            return self.getTypedRuleContext(MermaidStateDiagramParser.DiagramTypeContext,0)


        def EOF(self):
            return self.getToken(MermaidStateDiagramParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(MermaidStateDiagramParser.NEWLINE)
            else:
                return self.getToken(MermaidStateDiagramParser.NEWLINE, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MermaidStateDiagramParser.StatementContext)
            else:
                return self.getTypedRuleContext(MermaidStateDiagramParser.StatementContext,i)


        def getRuleIndex(self):
            return MermaidStateDiagramParser.RULE_diagram

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDiagram" ):
                return visitor.visitDiagram(self)
            else:
                return visitor.visitChildren(self)




    def diagram(self):

        localctx = MermaidStateDiagramParser.DiagramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_diagram)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==34:
                self.state = 46
                self.match(MermaidStateDiagramParser.NEWLINE)
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 52
            self.diagramType()
            self.state = 56
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 53
                    self.match(MermaidStateDiagramParser.NEWLINE) 
                self.state = 58
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 27919647208) != 0):
                self.state = 59
                self.statement()
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 65
            self.match(MermaidStateDiagramParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DiagramTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_STATE_DIAGRAM_V2(self):
            return self.getToken(MermaidStateDiagramParser.KW_STATE_DIAGRAM_V2, 0)

        def KW_STATE_DIAGRAM(self):
            return self.getToken(MermaidStateDiagramParser.KW_STATE_DIAGRAM, 0)

        def getRuleIndex(self):
            return MermaidStateDiagramParser.RULE_diagramType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDiagramType" ):
                return visitor.visitDiagramType(self)
            else:
                return visitor.visitChildren(self)




    def diagramType(self):

        localctx = MermaidStateDiagramParser.DiagramTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_diagramType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            _la = self._input.LA(1)
            if not(_la==1 or _la==2):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stateDecl(self):
            return self.getTypedRuleContext(MermaidStateDiagramParser.StateDeclContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(MermaidStateDiagramParser.NEWLINE)
            else:
                return self.getToken(MermaidStateDiagramParser.NEWLINE, i)

        def transitionStmt(self):
            return self.getTypedRuleContext(MermaidStateDiagramParser.TransitionStmtContext,0)


        def compositeBlock(self):
            return self.getTypedRuleContext(MermaidStateDiagramParser.CompositeBlockContext,0)


        def noteBlock(self):
            return self.getTypedRuleContext(MermaidStateDiagramParser.NoteBlockContext,0)


        def concurrencyDiv(self):
            return self.getTypedRuleContext(MermaidStateDiagramParser.ConcurrencyDivContext,0)


        def directionStmt(self):
            return self.getTypedRuleContext(MermaidStateDiagramParser.DirectionStmtContext,0)


        def classDefStmt(self):
            return self.getTypedRuleContext(MermaidStateDiagramParser.ClassDefStmtContext,0)


        def classAssignStmt(self):
            return self.getTypedRuleContext(MermaidStateDiagramParser.ClassAssignStmtContext,0)


        def COMMENT(self):
            return self.getToken(MermaidStateDiagramParser.COMMENT, 0)

        def getRuleIndex(self):
            return MermaidStateDiagramParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = MermaidStateDiagramParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 69
                self.stateDecl()
                self.state = 73
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 70
                        self.match(MermaidStateDiagramParser.NEWLINE) 
                    self.state = 75
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 76
                self.transitionStmt()
                self.state = 80
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 77
                        self.match(MermaidStateDiagramParser.NEWLINE) 
                    self.state = 82
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 83
                self.compositeBlock()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 84
                self.noteBlock()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 85
                self.concurrencyDiv()
                self.state = 89
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 86
                        self.match(MermaidStateDiagramParser.NEWLINE) 
                    self.state = 91
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 92
                self.directionStmt()
                self.state = 96
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 93
                        self.match(MermaidStateDiagramParser.NEWLINE) 
                    self.state = 98
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 99
                self.classDefStmt()
                self.state = 103
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 100
                        self.match(MermaidStateDiagramParser.NEWLINE) 
                    self.state = 105
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 106
                self.classAssignStmt()
                self.state = 110
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 107
                        self.match(MermaidStateDiagramParser.NEWLINE) 
                    self.state = 112
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 113
                self.match(MermaidStateDiagramParser.COMMENT)
                self.state = 117
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 114
                        self.match(MermaidStateDiagramParser.NEWLINE) 
                    self.state = 119
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 121 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 120
                        self.match(MermaidStateDiagramParser.NEWLINE)

                    else:
                        raise NoViableAltException(self)
                    self.state = 123 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StateDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_STATE(self):
            return self.getToken(MermaidStateDiagramParser.KW_STATE, 0)

        def QUOTED_STRING(self):
            return self.getToken(MermaidStateDiagramParser.QUOTED_STRING, 0)

        def KW_AS(self):
            return self.getToken(MermaidStateDiagramParser.KW_AS, 0)

        def stateId(self):
            return self.getTypedRuleContext(MermaidStateDiagramParser.StateIdContext,0)


        def classShorthand(self):
            return self.getTypedRuleContext(MermaidStateDiagramParser.ClassShorthandContext,0)


        def COLON(self):
            return self.getToken(MermaidStateDiagramParser.COLON, 0)

        def descriptionText(self):
            return self.getTypedRuleContext(MermaidStateDiagramParser.DescriptionTextContext,0)


        def STEREOTYPE(self):
            return self.getToken(MermaidStateDiagramParser.STEREOTYPE, 0)

        def getRuleIndex(self):
            return MermaidStateDiagramParser.RULE_stateDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStateDecl" ):
                return visitor.visitStateDecl(self)
            else:
                return visitor.visitChildren(self)




    def stateDecl(self):

        localctx = MermaidStateDiagramParser.StateDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_stateDecl)
        self._la = 0 # Token type
        try:
            self.state = 153
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.match(MermaidStateDiagramParser.KW_STATE)
                self.state = 128
                self.match(MermaidStateDiagramParser.QUOTED_STRING)
                self.state = 129
                self.match(MermaidStateDiagramParser.KW_AS)
                self.state = 130
                self.stateId()
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==23:
                    self.state = 131
                    self.classShorthand()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.match(MermaidStateDiagramParser.KW_STATE)
                self.state = 135
                self.stateId()
                self.state = 136
                self.match(MermaidStateDiagramParser.COLON)
                self.state = 137
                self.descriptionText()
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==23:
                    self.state = 138
                    self.classShorthand()


                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 141
                self.match(MermaidStateDiagramParser.KW_STATE)
                self.state = 142
                self.stateId()
                self.state = 143
                self.match(MermaidStateDiagramParser.STEREOTYPE)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 145
                self.stateId()
                self.state = 146
                self.match(MermaidStateDiagramParser.COLON)
                self.state = 147
                self.descriptionText()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 149
                self.stateId()
                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==23:
                    self.state = 150
                    self.classShorthand()


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StateIdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MermaidStateDiagramParser.ID, 0)

        def getRuleIndex(self):
            return MermaidStateDiagramParser.RULE_stateId

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStateId" ):
                return visitor.visitStateId(self)
            else:
                return visitor.visitChildren(self)




    def stateId(self):

        localctx = MermaidStateDiagramParser.StateIdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_stateId)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(MermaidStateDiagramParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DescriptionTextContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FREE_TEXT(self, i:int=None):
            if i is None:
                return self.getTokens(MermaidStateDiagramParser.FREE_TEXT)
            else:
                return self.getToken(MermaidStateDiagramParser.FREE_TEXT, i)

        def getRuleIndex(self):
            return MermaidStateDiagramParser.RULE_descriptionText

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDescriptionText" ):
                return visitor.visitDescriptionText(self)
            else:
                return visitor.visitChildren(self)




    def descriptionText(self):

        localctx = MermaidStateDiagramParser.DescriptionTextContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_descriptionText)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 157
                self.match(MermaidStateDiagramParser.FREE_TEXT)
                self.state = 160 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==36):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassShorthandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRIPLE_COLON(self):
            return self.getToken(MermaidStateDiagramParser.TRIPLE_COLON, 0)

        def ID(self):
            return self.getToken(MermaidStateDiagramParser.ID, 0)

        def getRuleIndex(self):
            return MermaidStateDiagramParser.RULE_classShorthand

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassShorthand" ):
                return visitor.visitClassShorthand(self)
            else:
                return visitor.visitChildren(self)




    def classShorthand(self):

        localctx = MermaidStateDiagramParser.ClassShorthandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_classShorthand)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(MermaidStateDiagramParser.TRIPLE_COLON)
            self.state = 163
            self.match(MermaidStateDiagramParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TransitionStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stateRef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MermaidStateDiagramParser.StateRefContext)
            else:
                return self.getTypedRuleContext(MermaidStateDiagramParser.StateRefContext,i)


        def TRANSITION(self):
            return self.getToken(MermaidStateDiagramParser.TRANSITION, 0)

        def COLON(self):
            return self.getToken(MermaidStateDiagramParser.COLON, 0)

        def transitionLabel(self):
            return self.getTypedRuleContext(MermaidStateDiagramParser.TransitionLabelContext,0)


        def getRuleIndex(self):
            return MermaidStateDiagramParser.RULE_transitionStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTransitionStmt" ):
                return visitor.visitTransitionStmt(self)
            else:
                return visitor.visitChildren(self)




    def transitionStmt(self):

        localctx = MermaidStateDiagramParser.TransitionStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_transitionStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.stateRef()
            self.state = 166
            self.match(MermaidStateDiagramParser.TRANSITION)
            self.state = 167
            self.stateRef()
            self.state = 170
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32:
                self.state = 168
                self.match(MermaidStateDiagramParser.COLON)
                self.state = 169
                self.transitionLabel()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StateRefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stateId(self):
            return self.getTypedRuleContext(MermaidStateDiagramParser.StateIdContext,0)


        def classShorthand(self):
            return self.getTypedRuleContext(MermaidStateDiagramParser.ClassShorthandContext,0)


        def START_END(self):
            return self.getToken(MermaidStateDiagramParser.START_END, 0)

        def getRuleIndex(self):
            return MermaidStateDiagramParser.RULE_stateRef

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStateRef" ):
                return visitor.visitStateRef(self)
            else:
                return visitor.visitChildren(self)




    def stateRef(self):
